# GoBot-ALPHA-1.3

./: .breakpoints  afk.json  automod.json  automod_lists.json  blackjack.json  commands.json  counting.json  leave.json  levels.json  locallevels.json  main.py  prefixes.json  pyproject.toml  random-stuff.json  reaction_roles.json  servers.json
Cogs/: afk.py  blackjack.py  bomb.py  button_template.py  counting.py  embeds.py  errors.py  fun.py  giveaways.py  gleaderboard.py  gleveling.py  info.py  init.py  leaver.py  localleaderboard.py  localleveling.py  math.py  moderation.py  polls.py  reactions.py  template.py  tictactoe.py  util.py  vote_tracker.py  welcome.py
Other/: code.txt  encryption.py  hosting.py  translator.py
