[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
Flask = "^2.1.1"
praw = "^7.5.0"
requests = "^2.27.1"
googletrans = "^3.0.0"
discord-ui = "^5.1.6"
emoji = "^1.7.0"
bs4 = "^0.0.1"
colorthief = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"